baml_language/crates/baml_tests/snapshots/catch_return_type_mismatch/baml_tests__catch_return_type_mismatch__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
enum user.Errors {AuthenticationError, AuthorizationError, NotFoundError, InternalServerError}
function user.callee() -> bool  [expr] {
  { return true }
}
function user.caller() -> bool  [expr] {
  {  } callee() catch (e) { Errors.AuthenticationError => { return e } }
}
