baml_language/crates/baml_tests/snapshots/catch_return_type_mismatch/baml_tests__catch_return_type_mismatch__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.caller() -> bool {
    // Locals:
    let _0: bool // _0 // return
    let _1: unknown
    let _2: Errors // e
    let _3: bool

    bb0: {
        _0 = call const fn user.callee() -> [bb4, unwind: bb1];
    }

    bb1: {
        _2 = copy _1;
        _3 = copy _1 == const user.Errors.AuthenticationError;
        branch copy _3 -> [bb3, bb2];
    }

    bb2: {
        throw copy _1;
    }

    bb3: {
        _0 = copy _2;
        goto -> bb6;
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        goto -> bb6;
    }

    bb6: {
        return;
    }
}

fn user.callee() -> bool {
    // Locals:
    let _0: bool // _0 // return

    bb0: {
        _0 = const true;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
