baml_language/crates/baml_tests/snapshots/catch_return_type_mismatch/baml_tests__catch_return_type_mismatch__04_tir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
enum user.Errors
function user.callee() -> bool throws user.Errors {
  { : never
    return true : true
  }
  ?? 218..225: extraneous throws declaration: user.Errors
}
function user.caller() -> bool {
  { : bool
    catch (callee() : bool) : bool
      catch (e)
        Errors.AuthenticationError =>
          { : never
            return e : user.Errors
          }
  }
  !! 458..459: type mismatch: expected bool, got user.Errors
}
