baml_language/crates/baml_tests/snapshots/catch_return_type_mismatch/baml_tests__catch_return_type_mismatch__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Warning: unreachable arm
   ╭─[ registry.baml:1:1 ]
   │
 1 │ // root.TestCollector — collector for tests and testsets.
   │ │ 
   │ ╰─ unreachable arm
   │ 
   │ Note: Error code: E0001
───╯

  [type] Warning: unreachable arm
     ╭─[ registry.baml:182:2 ]
     │
 182 │ ╭─▶         RunReport { outcome: "fail", duration_ms: 0 }
     ┆ ┆   
 184 │ ├─▶     }
     │ │           
     │ ╰─────────── unreachable arm
     │     
     │     Note: Error code: E0001
─────╯

  [type] Warning: extraneous throws declaration: user.Errors
    ╭─[ catch_return_type_mismatch.baml:10:33 ]
    │
 10 │ function callee() -> bool throws Errors {
    │                                 ───┬───  
    │                                    ╰───── extraneous throws declaration: user.Errors
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: type mismatch: expected bool, got user.Errors
    ╭─[ catch_return_type_mismatch.baml:18:44 ]
    │
 18 │     Errors.AuthenticationError => { return e }
    │                                            ┬  
    │                                            ╰── type mismatch: expected bool, got user.Errors
    │ 
    │ Note: Error code: E0001
────╯
