baml_language/crates/baml_tests/snapshots/catch_return_type_mismatch/baml_tests__catch_return_type_mismatch__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.callee() -> bool {
    load_const true
    return
}

function user.caller() -> bool {
    call user.callee
    jump L2
    load_var _1
    load_const user.Errors.AuthenticationError
    alloc_variant user.Errors
    cmp_op ==
    pop_jump_if_false L0
    jump L1

  L0:
    load_var _1
    throw

  L1:
    load_var _1

  L2:
    return
}
