baml_language/crates/baml_tests/snapshots/catch_return_type_mismatch/baml_tests__catch_return_type_mismatch__06_codegen2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.callee() -> bool {
    load_const true
    return
}

function user.caller() -> bool {
    push_unwind L0, slot 1
    call user.callee
    pop_unwind
    jump L3

  L0:
    load_var _1
    load_const user.Errors.AuthenticationError
    alloc_variant user.Errors
    cmp_op ==
    pop_jump_if_false L1
    jump L2

  L1:
    load_var _1
    throw

  L2:
    load_var _1

  L3:
    return
}
